Resolve greeting linebreak on mobile.
also let footer break so layout isn't broken

--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ p {
   font-size: 0.5em;
   color: var(--text-color-default);
   opacity: 0.6;
+  white-space: nowrap;
 }
 
 
@@ -504,6 +505,7 @@ p {
   .credits {
     flex-direction: row;
     text-align: center;
+    flex-wrap: wrap;
   }
 }
 /* End of Mobile */
